# Fane

./: .gitignore  main.py  pyproject.toml
docs/: PROJECT_GUIDE.md
ir/: __init__.py  ir.py
package/: errors.py
package/cmd/: __init__.py  root.py  trans.py
package/compiler/: __init__.py  compiler.py  post_processors.py  results.py  writer.py
package/config/: __init__.py  config.py  init.py
package/enums/: const.py
package/parser/: __init__.py  analyser.py  paser.py  rule_resolver.py
package/parser/ali/: alipay.py
package/parser/utils/: utils.py
package/parser/wechat/: wechat.py
package/strategy/template/: normal.py  strategy.py
package/template/: normal.j2  template.py
provider/: __init__.py  base.py  provider.py  registry.py
provider/ali/: ali_types.py  alipay.py  converter.py  processor.py  rules.py
provider/wechat/: converter.py  rules.py  wecaht_types.py  wechat.py  wechat_types.py
tests/: test_regression.py
